<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    android:background="@color/black"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    >

    <TextView
        android:id="@+id/textview_welcome"
        android:text="Welcome"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="36dp"
        android:fontFamily="@font/courgette"
        android:background="@drawable/border_white_bottom"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/gradient_background"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/linear_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageview_date_icon"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintBottom_toTopOf="@id/button_create"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/textview_date"
                    android:src="@drawable/ic_plus_square_regular" />

                <TextView
                    android:id="@+id/textview_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Tuesday,\nFebruary 2, 2021"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    app:layout_constraintLeft_toRightOf="@+id/imageview_date_icon"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
            <GridLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/GridLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"
                android:orientation="horizontal"
                tools:context=".GridXMLActivity" >

                <TextView
                    android:id="@+id/category"
                    android:layout_gravity="left"
                    android:text="Category"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:fontFamily="@font/courgette"/>
                <EditText

                    android:id="@+id/category_button"
                    android:layout_gravity="right"
                    android:layout_width="100dp"
                    android:textColor="@color/white"
                    android:background="@drawable/border_gray_foursides"
                    android:hint="Name"
                    android:fontFamily="@font/courgette"
                    android:textColorHint="@color/dark_gray"
                    android:paddingHorizontal="10dp"
                    />
                <TextView
                    android:id="@+id/button_share_with"
                    android:layout_gravity="left"
                    android:text="Share With"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:fontFamily="@font/courgette"/>
                <EditText
                    android:id="@+id/editText_share_with"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:background="@drawable/border_gray_foursides"
                    android:layout_width="100dp"
                    android:hint="Private"
                    android:textColorHint="@color/dark_gray"
                    android:fontFamily="@font/courgette"
                    android:paddingHorizontal="10dp"/>
                <TextView
                    android:id="@+id/textview_time_specific"
                    android:layout_gravity="left"
                    android:text="Time Specific"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:fontFamily="@font/courgette"/>

                <CheckBox
                    android:id="@+id/checkbox_cheese"
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:layout_gravity="right"
                    android:buttonTint="@color/green_text"
                    android:checked="true" />


            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/GridLayout1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:columnCount="2"
                android:rowCount="2"
                android:paddingHorizontal="50dp"
                >
                <TextView
                    android:id="@+id/textview_date_label"
                    android:layout_gravity="top"
                    android:text="Date"
                    android:textColor="@color/dark_gray"
                    android:textSize="16dp"
                    android:fontFamily="@font/courgette"/>

                <EditText
                    android:id="@+id/editText_date"
                    android:layout_gravity="right"
                    android:text="mm/dd/yyy"
                    android:textColor="@color/dark_gray"
                    android:background="@android:color/transparent"
                    android:layout_width="110dp"
                    android:hint="Private"
                    android:textSize="16dp"
                    android:textColorHint="@color/dark_gray"
                    android:fontFamily="@font/courgette"
                    android:paddingHorizontal="10dp"/>
                <TextView
                    android:id="@+id/textview_time_label"
                    android:layout_gravity="top"
                    android:text="Time"
                    android:textColor="@color/dark_gray"
                    android:textSize="16dp"
                    android:fontFamily="@font/courgette"/>

                <EditText
                    android:id="@+id/editText_time"
                    android:layout_gravity="right"
                    android:textColor="@color/dark_gray"
                    android:background="@android:color/transparent"
                    android:layout_width="110dp"
                    android:text="00:00"
                    android:fontFamily="@font/courgette"
                    android:textSize="16dp"
                    android:paddingHorizontal="10dp"/>
            </GridLayout>



            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/courgette"
                android:text="Create a List"
                android:textAllCaps="false"
                android:textSize="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>