...
                <ImageView
                    android:id="@+id/imageview_date_icon"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginHorizontal="10dp"
                    app:srcCompat="@drawable/ic_plus_square_regular"
                    app:layout_constraintBottom_toTopOf="@id/button_create_frag"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/textview_date" />

                <TextView
                    android:id="@+id/textview_date"
                    android:layout_width="wrap_content"
...
